# messenger

./: ChatMessage_8cpp.html  ChatMessage_8cpp__incl.map  ChatMessage_8cpp__incl.md5  ChatMessage_8h.html  ChatMessage_8h__dep__incl.map  ChatMessage_8h__dep__incl.md5  ChatMessage_8h__incl.map  ChatMessage_8h__incl.md5  ChatMessage_8h_source.html  ChatMessage__tests_8cpp.html  ChatMessage__tests_8cpp__incl.map  ChatMessage__tests_8cpp__incl.md5  ChatParticipant_8h.html  ChatParticipant_8h__dep__incl.map  ChatParticipant_8h__dep__incl.md5  ChatParticipant_8h__incl.map  ChatParticipant_8h__incl.md5  ChatParticipant_8h_source.html  ChatRoom_8cpp.html  ChatRoom_8cpp__incl.map  ChatRoom_8cpp__incl.md5  ChatRoom_8h.html  ChatRoom_8h__dep__incl.map  ChatRoom_8h__dep__incl.md5  ChatRoom_8h__incl.map  ChatRoom_8h__incl.md5  ChatRoom_8h_source.html  ChatRoom__tests_8cpp.html  ChatRoom__tests_8cpp__incl.map  ChatRoom__tests_8cpp__incl.md5  ChatServer_8cpp.html  ChatServer_8cpp__incl.map  ChatServer_8cpp__incl.md5  ChatServer_8h.html  ChatServer_8h__dep__incl.map  ChatServer_8h__dep__incl.md5  ChatServer_8h__incl.map  ChatServer_8h__incl.md5  ChatServer_8h_source.html  ChatSessionFactory_8cpp.html  (+375 more)
.github/workflows/: documentation.yml  release.yml
docker/: Dockerfile
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_6.js  all_7.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+17 more)
src/: CMakeLists.txt  Doxyfile
src/client/: CMakeLists.txt  Messenger.cpp  Messenger.h  main.cpp  pch.h
src/client/app/: IPostService.h  MessageData.h
src/client/infrastructure/: PostService.cpp  PostService.h
src/client/ui/: ChatView.cpp  ChatView.h  IChatView.h  IDrawable.h  IMenuView.h  MenuCommand.h  MenuView.cpp  MenuView.h
src/common/domain/: IMessage.h  UUID.h
src/common/infrastructure/: ChatMessage.cpp  ChatMessage.h  ServerSettings.h
src/common/proto/: CMakeLists.txt  include.h  messenger.proto
src/common/signals/: Signals.h
src/domain/: IChat.h  IChat_fwd.h  IMessage_fwd.h  IUser.h  IUser_fwd.h
src/server/: CMakeLists.txt  main.cpp  pch.h
src/server/app/: ChatParticipant.h  ChatRoom.cpp  ChatRoom.h  IChatSession.h
src/server/infrastructure/: ChatServer.cpp  ChatServer.h  ChatSession.cpp  ChatSession.h  ChatSessionFactory.cpp  ChatSessionFactory.h
src/server/test/: ChatMessage_tests.cpp  ChatRoom_tests.cpp
